# basic-genetic-algorithm

./: Brain.cpp  Brain.h  CMakeLists.txt  Dot.cpp  Dot.h  Population.cpp  Population.h  README.md  Simulation.cpp  Simulation.h  main.cpp
